# competitive-factors

./: README  competitive-factors.cabal
app/: Multigram.hs
src/Competitive/: Factors.hs
