cabal-version:      3.0
name:               competitive-factors
version:            0.1.0.0
license:
author:             June Woodward
maintainer:         jlwoodwa@caltech.edu
category:           Math
extra-source-files: README

library
  exposed-modules:  Competitive.Factors
  build-depends:
    , base        ^>=4.14.1.0
    , containers  ^>=0.6.4.1

  hs-source-dirs:   src
  default-language: Haskell2010

executable multigram
  main-is:          Multigram.hs
  build-depends:
    , base                 ^>=4.14.1.0
    , competitive-factors
    , containers           ^>=0.6.4.1
    , extra                ^>=1.7.8

  -- , split                ^>=0.2.3.4 -- not needed with extra

  hs-source-dirs:   app
  default-language: Haskell2010
